Build the html structure

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=<h1>, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Weather App</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <form>
+      <input type="search" placeholder="Enter a city ..." />
+      <input type="submit" value="Search" />
+    </form>
+    <div>
+    <h1>London</h1>
+    <p>Monday 10:08, broken clouds </br>
+        Humidity: 83%, Wind: 7.2km/h</p>
+    </div>
+        <div>12°</div>
   </body>
 </html>
