--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=<h1>, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="src/index.css"/>
     <title>Weather App</title>
   </head>
   <body>
+    <div class="weatherApp">
     <form>
       <input type="search" placeholder="Enter a city ..." />
       <input type="submit" value="Search" />
@@ -17,5 +22,14 @@
         Humidity: 83%, Wind: 7.2km/h</p>
     </div>
         <div>12°</div>
+<footer>
+    This project was code by <a href="https://github.com/d-ecember" target="_blank">Emily</a>
+    is <a href="https://github.com/d-ecember/SheCodesHomework-7" target="_blank">open-source on GitHub</a>
+    and 
+    <a href="https://shecodeshomework7.netlify.app/" target="_blank">hosted by Netlify</a>
+</div>
+</footer>
+
   </body>
+
 </html>
