--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div class="weatherAppUnit">°C</div>
           </div>
         </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
 
       <footer>
